drkns 10.12.2018 22:50:11 +0000 - build 5341

1. Рефакторинг.

zg 10.12.2018 16:16:53 +0200 - build 5340

1. 0003657: DM_SETTEXT не сбрасывает LeftPos в ноль.

svs 10.12.2018 09:01:02 +0300 - build 5339

1. SQLite 3.26.0

zg 07.12.2018 10:52:37 +0200 - build 5338

продолжение 5337:

1. оптимизация расхода памяти.

2. "ChangeTime" не восстанавливается.

zg 05.12.2018 18:17:44 +0200 - build 5337

1. сохранение всех дат папки при копировании.

drkns 05.12.2018 07:54:14 +0000 - build 5336

1. Уточнение 5334.

drkns 04.12.2018 23:30:45 +0000 - build 5335

1. Падение в диалоге far:config при определенных обстоятельствах.

2. Поддержка компиляции в Visual Studio 2019.

drkns 04.12.2018 02:08:22 +0000 - build 5334

1. Еще некоторые исправления конкурентного доступа к sqlite.

2. Рефакторинг.

drkns 02.12.2018 00:14:12 +0000 - build 5333

1. Как выяснилось, SQlite при завершении транзакции записи не завершает её,
   а даунгрейдит до транзакции чтения, если существуют активные стейтменты.
   Это приводило к забавным эффектам при попытках создания последующих транзакций и, в конце концов, к падениям.

drkns 29.11.2018 18:07:01 +0000 - build 5332

1. Вернём "ClearType-friendly redraw" для Windows 10 - это всё ещё актуально для Legacy Console.

drkns 28.11.2018 19:20:40 +0000 - build 5331

1. VT-рендерер не учитывал, что плагины вместо нормального цвета вполне могут предоставлять шопопало.

2. Флаг ENABLE_VIRTUAL_TERMINAL_INPUT сбрасывается, если установлен.

3. В Windows 10 опция "ClearType-friendly redraw" ничего не делает.

drkns 28.11.2018 01:12:50 +0000 - build 5330

1. Показываем LastError & NTSTATUS в обработчике исключений, если возможно.

svs 27.11.2018 16:57:10 +0300 - build 5329

1. SQLite 3.25.3

drkns 26.11.2018 23:46:06 +0000 - build 5328

1. 0001726: Entering symbols using Input Method Editor doesn't work.

drkns 25.11.2018 22:07:47 +0000 - build 5327

1. Уточнения обработки исключений.

2. Рефакторинг.

w17 23.11.2018 16:13:05 +0300 - build 5326
