@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 11.12.2018 01:59:56 +0000 - build 5342
+
+1. VS 2015.
+
 drkns 10.12.2018 22:50:11 +0000 - build 5341
 
 1. Refactoring.
