@@ -1,3 +1,7 @@
+drkns 11.12.2018 01:59:56 +0000 - build 5342
+
+1. VS 2015.
+
 drkns 10.12.2018 22:50:11 +0000 - build 5341
 
 1. Рефакторинг.
